Added ShowGraph Function

--- a/enhancing_rag_with_graph.ipynb
+++ b/enhancing_rag_with_graph.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 1,
       "metadata": {
         "id": "5x3LkpUztHNU"
       },
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 2,
       "metadata": {
         "id": "jPIRSGz4tHNV"
       },
@@ -29,10 +29,10 @@
         {
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -67,8 +67,22 @@
       "metadata": {
         "id": "L0nXP1aYtHNW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\erik\\AppData\\Local\\Temp\\ipykernel_27668\\2133525513.py:6: LangChainDeprecationWarning: The class `Neo4jGraph` was deprecated in LangChain 0.3.8 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-neo4j package and should be used instead. To use it run `pip install -U :class:`~langchain-neo4j` and import as `from :class:`~langchain_neo4j import Neo4jGraph``.\n",
+            "  graph = Neo4jGraph()\n"
+          ]
+        }
+      ],
       "source": [
+        "# Ensure the environment variable NEO4J_URI is set\n",
+        "os.environ[\"NEO4J_URI\"] = \"bolt://localhost:7687\"  # Replace with your actual Neo4j URI\n",
+        "os.environ[\"NEO4J_USERNAME\"] = \"neo4j\"\n",
+        "os.environ[\"NEO4J_PASSWORD\"] = \"your_password\"\n",
+        "\n",
         "graph = Neo4jGraph()"
       ]
     },
@@ -93,11 +107,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "pXf7OTGHtHNW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\erik\\AppData\\Local\\Temp\\ipykernel_27668\\2732011415.py:1: LangChainDeprecationWarning: The class `OllamaFunctions` was deprecated in LangChain 0.0.64 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import ChatOllama``.\n",
+            "  llm = OllamaFunctions(model=\"llama3.1\", temperature=0, format=\"json\")\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "llm = OllamaFunctions(model=\"llama3.1\", temperature=0, format=\"json\")\n",
@@ -109,16 +132,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "GraphDocument(nodes=[Node(id=\"Amico'S Family\", type='Family', properties={})], relationships=[], source=Document(metadata={'source': 'dummytext.txt', 'id': 'ed648f5744c61a703b28736f1a7cf0c0'}, page_content='1. The Story of Amico’s Family: A Legacy of Love and Tradition'))"
+              "GraphDocument(nodes=[Node(id=\"Amico'S Family\", type='Family', properties={})], relationships=[], source=Document(metadata={'source': 'dummytext.txt'}, page_content='1. The Story of Amicoâ€™s Family: A Legacy of Love and Tradition'))"
             ]
           },
-          "execution_count": 88,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -129,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -142,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 8,
       "metadata": {
         "id": "GHbJPMfDtHNW"
       },
@@ -164,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -177,7 +200,15 @@
         "id": "RMZlhtDmtHNW",
         "outputId": "86efa842-3297-45d6-dab2-681bbc836b4d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fulltext index created successfully.\n"
+          ]
+        }
+      ],
       "source": [
         "driver = GraphDatabase.driver(\n",
         "        uri = os.environ[\"NEO4J_URI\"],\n",
@@ -210,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -250,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -265,7 +296,7 @@
               "Entities(names=['Nonna Lucia', 'Giovanni Caruso'])"
             ]
           },
-          "execution_count": 95,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -276,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 12,
       "metadata": {
         "id": "dY8huoM8tHNX"
       },
@@ -322,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,11 +366,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Nonna Lucia - INFLUENCED -> Caponata\n",
-            "Nonna Lucia - INFLUENCED -> Fresh Pasta\n",
-            "Nonna Lucia - TAUGHT -> Amico\n",
-            "Lucia - USES -> Organic And Local Ingredients\n",
-            "Lucia - PRACTICES -> Sustainable Cooking Practices\n",
+            "Nonna Lucia - CREATED -> Caponata\n",
+            "Nonna Lucia - CREATED -> Fresh Pasta\n",
+            "Nonna Lucia - TEACHES -> Amico\n",
+            "Lucia - PRACTICES -> Baking\n",
+            "Lucia - LIVES_IN -> Los Angeles\n",
+            "Lucia - OWNED_BY -> Bella Vita\n",
+            "Lucia - INHERITED_CULINARY_TALENT -> Grandmother\n",
+            "Lucia - GRANDMOTHER -> Amico\n",
+            "Lucia - SISTER -> Antonio\n",
             "Bella Vita - OWNER -> Lucia\n"
           ]
         }
@@ -350,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 14,
       "metadata": {
         "id": "iCTMp3prtHNX"
       },
@@ -369,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 15,
       "metadata": {
         "id": "Dzb2jcittHNY"
       },
@@ -396,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -409,16 +444,50 @@
         {
           "data": {
             "text/plain": [
-              "\"Nonna Lucia is the matriarch of the Caruso family, a culinary sage who taught her grandchildren, including Amico, the art of Sicilian cooking. She's also the owner of Bella Vita.\""
+              "\"Nonna Lucia was a Sicilian matriarch who taught her grandchildren, including Amico, the art of traditional Sicilian cooking. She was a culinary sage and custodian of her family's recipes.\""
             ]
           },
-          "execution_count": 101,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "chain.invoke(input=\"Who is Nonna Lucia? Did she teach anyone about restaurants or cooking?\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b17ecf1da2af4925a958b2e4d7498206",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "GraphWidget(layout=Layout(height='800px', width='100%'))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "def showGraph():\n",
+        "    driver = GraphDatabase.driver(\n",
+        "        uri = os.environ[\"NEO4J_URI\"],\n",
+        "        auth = (os.environ[\"NEO4J_USERNAME\"],\n",
+        "                os.environ[\"NEO4J_PASSWORD\"]))\n",
+        "    session = driver.session()\n",
+        "    widget = GraphWidget(graph = session.run(\"MATCH (s)-[r:!MENTIONS]->(t) RETURN s,r,t\").graph())\n",
+        "    widget.node_label_mapping = 'id'\n",
+        "    return widget\n",
+        "\n",
+        "showGraph()"
       ]
     }
   ],
@@ -428,7 +497,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -442,7 +511,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.10"
+      "version": "3.13.1"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
